--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.21.0
-streamlit-option-menu==0.3.2
-streamlit-on-Hover-tabs==1.0.1
+streamlit
+streamlit-option-menu
+streamlit-on-Hover-tabs
 requests==2.28.2
 streamlit-extras
 pandas
+openpyxl
